--- a/stargaze/templates/index.html
+++ b/stargaze/templates/index.html
@@ -3,51 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <title>Stargaze</title>
-     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
-     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
     <style>
         #map { height: 500px;  margin: 20px; }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #473685;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="color: white;">Stargaze</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="#" style="color: white;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: white;">About</a>
-            </li>
-          </ul>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ url_for('index') }}" style="color: #473685;">Stargaze</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{{ url_for('index') }}" style="color: #473685;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('about') }}" style="color: #473685;">About</a>
+                    </li>
+                    </ul>
+                </div>
         </div>
-      </div>
-
     </nav>
+
     <h1 align="center" style="color: #473685; border: 2px; padding: 10px;">Welcome to stargaze!</h1>
 <!--    <img align="right" src="/static/stargaze.jpg" width="100" height="100">-->
     <h2 align="center" style="color: #473685;">Find the best stargazing spot</h2>
-    <form method="POST" style="padding: 20px;">
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">Whereabouts (name or coordinates):</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" name="whereabouts" value="{{ whereabouts }}">
-        </div>
+    <div>
+        <form method="POST" style="padding: 20px;">
+            <div class="mb-3">
+                <label for="whereabouts" class="form-label">Whereabouts (name or coordinates):</label>
+                <input type="text" class="form-control" id="whereabouts" name="whereabouts" value="{{ whereabouts }}">
+            </div>
         <button type="submit" class="btn btn-primary" style="background-color: #473685; border-color: #473685">Search</button>
-    </form>
+        </form>
+    </div>
+
+    <div class="accordion" id="advancedSearch" style="padding: 20px;">
+        <div class="accordion-item">
+        <h2 class="accordion-header">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Advanced Search
+        </button>
+        </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <form method="POST" style="padding: 20px;">
+                <div class="mb-3">
+                    <label for="radius" class="form-label">Search radius:</label>
+                    <input type="text" class="form-control" id="radius" name="radius" placeholder="10km">
+                </div>
+                <label for="direction">Direction:</label>
+                <select class="form-select" id="direction" name="direction">
+                  <option selected>North</option>
+                  <option value="1">East</option>
+                  <option value="2">South</option>
+                  <option value="3">West</option>
+                </select>
+                </form>
+            </div>
+            </div>
+        </div>
+    </div>
 
     <div id="map"></div>
 
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
     <script>
         var map = L.map('map').setView([50.0647, 19.9450], 13);
         var myIcon = L.icon({
@@ -66,8 +96,8 @@
             var marker = L.marker([coordinates.lat, coordinates.lon], {icon: myIcon}).addTo(map);
             map.setView([coordinates.lat, coordinates.lon], 10);
         {% endif %}
-
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
