--- a/stargaze/templates/index.html
+++ b/stargaze/templates/index.html
@@ -47,7 +47,7 @@
 
     </div>
 
-    <div class="accordion" id="advancedSearch" style="padding: 20px;">
+    <div class="accordion" id="advancedSearch" style="padding-top: 20px;">
         <div class="accordion-item">
         <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -74,6 +74,10 @@
     </div>
     </form>
 
+    {% if spots %}
+    <p style="padding-left: 20px">Spots found: {{ spots | length }}</p>
+    {% endif %}
+
     <div id="map"></div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -98,8 +102,10 @@
             spots.forEach(function(spot) {
             L.marker([spot.lat, spot.lon], {icon: myIcon}).addTo(map);
             });
-            map.setView([spots[0].lat, spots[0].lon], 10);
+            map.setView([spots[0].lat, spots[0].lon], 15);
         {% endif %}
+
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
