--- a/stargaze/templates/index.html
+++ b/stargaze/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <title>Stargaze</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -34,7 +33,6 @@
     </nav>
 
     <h1 align="center" style="color: #473685; border: 2px; padding: 10px;">Welcome to stargaze!</h1>
-<!--    <img align="right" src="/static/stargaze.jpg" width="100" height="100">-->
     <h2 align="center" style="color: #473685;">Find the best stargazing spot</h2>
     <form method="POST" style="padding: 20px;">
     <div>
@@ -44,7 +42,6 @@
                 <input type="text" class="form-control" id="whereabouts" name="whereabouts" value="{{ whereabouts }}">
             </div>
         <button type="submit" class="btn btn-primary" style="background-color: #473685; border-color: #473685">Search</button>
-
     </div>
 
     <div class="accordion" id="advancedSearch" style="padding-top: 20px;">
@@ -56,7 +53,6 @@
         </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-
                 <div class="mb-3">
                     <label for="radius" class="form-label">Search radius:</label>
                     <input type="text" class="form-control" id="radius" name="radius" placeholder="3km">
@@ -74,12 +70,9 @@
     </div>
     </form>
 
-    {% if spots %}
-    <p style="padding-left: 20px">Spots found: {{ spots | length }}</p>
-    {% endif %}
+    <p id="spotsCount" style="padding-left: 20px"></p>
 
     <div id="map"></div>
-
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
@@ -95,7 +88,11 @@
             maxZoom: 19,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
-
+            {% if call_function %}
+            var element = document.getElementById('spotsCount');
+            var content = 'Spots found: {{ spots | length or 0 }}';
+            element.insertAdjacentHTML('afterbegin', content);
+            {% endif %}
 
         {% if spots %}
             var spots = {{ spots | tojson }};
@@ -104,10 +101,7 @@
             });
             map.setView([spots[0].lat, spots[0].lon], 15);
         {% endif %}
-
-
     </script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
