--- a/stargaze/templates/about.html
+++ b/stargaze/templates/about.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <title>About Stargaze</title>
+        <style>
+            a:link { color: black; }
+            a:visited { color: #473685; }
+        </style>
     </head>
     <body>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -29,6 +33,7 @@
                 <p><img src="/static/stargaze.jpg" alt="Stargaze logo" width="100" height="100" style="float:left;">
                 <p style="padding-left: 120px;">Stargaze is an application created by Aliaksei Kanstantsinau, Nikita Huleha and Marharyta Lisikava as a project for Software Studio II at AGH.</p></p>
                 <p style="padding-left: 120px;">If you're looking for the perfect spot to do some astrophotography or just look at the stars, this app is for you. </p>
+                <a href="https://github.com/huleha/stargaze" style="padding-left: 20px;">Stargaze on github</a>
             </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
